objects/cloudamp__Visitor_Sessions__c.object
<CustomObject>
    <description>This feature of the CloudAmp Campaign Tracker keeps track of the sessions of visitors to your web site, including what pages they visited prior to submitting a lead form.</description>
    <fields>
        <fullName>cloudamp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the Account associated with the Visitor Sessions after you convert the Lead to a contact as part of Lead Conversion process.</description>
        <inlineHelpText>This field displays the Account associated with the Visitor Sessions after you convert the Lead to a contact as part of Lead Conversion process.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visitor Sessions</relationshipLabel>
        <relationshipName>Visitor_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cloudamp__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the Contact associated with the Visitor Sessions after you convert the Lead to a contact as part of Lead Conversion process.</description>
        <inlineHelpText>This field displays the Contact associated with the Visitor Sessions after you convert the Lead to a contact as part of Lead Conversion process.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visitor Sessions</relationshipLabel>
        <relationshipName>Visitor_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cloudamp__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead related to this session. This field becomes blank once the lead is converted to an account / contact in the lead conversion process</description>
        <inlineHelpText>Lead related to this session. This field becomes blank once the lead is converted to an account / contact in the lead conversion process</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visitor Sessions</relationshipLabel>
        <relationshipName>Visitor_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cloudamp__Page_Title__c</fullName>
        <description>The title of the web page that a visitor went to on your web site.</description>
        <inlineHelpText>The title of the web page that a visitor went to on your web site.</inlineHelpText>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Page_URL__c</fullName>
        <description>The URL (web address) of the web page that a visitor went to on your web site.</description>
        <inlineHelpText>The URL (web address) of the web page that a visitor went to on your web site.</inlineHelpText>
        <label>Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cloudamp__Session_Number__c</fullName>
        <description>The number of the session for that visitor to your web site. 1 = the first time a visitor came to your web site.</description>
        <inlineHelpText>The number of the session for that visitor to your web site. 1 = the first time a visitor came to your web site.</inlineHelpText>
        <label>Session Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudamp__Time__c</fullName>
        <description>The date and time that a visitor went to that page on your web site.</description>
        <inlineHelpText>The date and time that a visitor went to that page on your web site.</inlineHelpText>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <label>Visitor Sessions</label>
    <listViews>
        <fullName>cloudamp__All_Visitor_Sessions</fullName>
        <columns>NAME</columns>
        <columns>cloudamp__Lead__c</columns>
        <columns>cloudamp__Contact__c</columns>
        <columns>cloudamp__Account__c</columns>
        <columns>cloudamp__Session_Number__c</columns>
        <columns>cloudamp__Time__c</columns>
        <columns>cloudamp__Page_Title__c</columns>
        <columns>cloudamp__Page_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Visitor Sessions</label>
    </listViews>
    <nameField>
        <displayFormat>VS-{0000}</displayFormat>
        <label>Visitor Sessions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitor Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>